--- a/main_8h_source.html
+++ b/main_8h_source.html
@@ -16,7 +16,7 @@
 <meta name="twitter:title" content="Embedded Platforms and Communications for IoT" />
 <meta name="twitter:description" content="Estela Mora Barba" />
 <!-- END twitter metadata -->
-<title>Plant Monitoring System - Phase 3: src/main.h Source File</title>
+<title>Plant Monitoring System: src/main.h Source File</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link rel="icon" type="image/svg+xml" href="logo.drawio.svg"/>
 <script type="text/javascript" src="jquery.js"></script>
@@ -59,7 +59,7 @@
  <tbody>
  <tr style="height: 56px;">
   <td id="projectalign" style="padding-left: 0.5em;">
-   <div id="projectname">Plant Monitoring System - Phase 3
+   <div id="projectname">Plant Monitoring System
    </div>
   </td>
  </tr>
@@ -213,12 +213,12 @@ $(document).ready(function(){initNavTree('main_8h_source.html',''); initResizabl
 <div class="ttc" id="astructsystem__measurement_html_a679c5d3346732350507e1e0be622f903"><div class="ttname"><a href="structsystem__measurement.html#a679c5d3346732350507e1e0be622f903">system_measurement::hum</a></div><div class="ttdeci">atomic_t hum</div><div class="ttdoc">Latest relative humidity (RH).</div><div class="ttdef"><b>Definition</b> main.h:64</div></div>
 <div class="ttc" id="astructsystem__measurement_html_a69e30193e5c378f404142b86ecf3b2e1"><div class="ttname"><a href="structsystem__measurement.html#a69e30193e5c378f404142b86ecf3b2e1">system_measurement::green</a></div><div class="ttdeci">atomic_t green</div><div class="ttdoc">Latest green color value (raw).</div><div class="ttdef"><b>Definition</b> main.h:67</div></div>
 <div class="ttc" id="astructsystem__measurement_html_a89d20f762267eb24053bf632f66c0f96"><div class="ttname"><a href="structsystem__measurement.html#a89d20f762267eb24053bf632f66c0f96">system_measurement::gps_alt</a></div><div class="ttdeci">atomic_t gps_alt</div><div class="ttdoc">Latest GPS altitude (meters).</div><div class="ttdef"><b>Definition</b> main.h:73</div></div>
-<div class="ttc" id="astructsystem__measurement_html_ab9efb3e641b5dfcea5f2433420b65f7b"><div class="ttname"><a href="structsystem__measurement.html#ab9efb3e641b5dfcea5f2433420b65f7b">system_measurement::accel_y</a></div><div class="ttdeci">atomic_t accel_y</div><div class="ttdoc">Latest Y-axis acceleration (in g).</div><div class="ttdef"><b>Definition</b> main.h:60</div></div>
+<div class="ttc" id="astructsystem__measurement_html_ab9efb3e641b5dfcea5f2433420b65f7b"><div class="ttname"><a href="structsystem__measurement.html#ab9efb3e641b5dfcea5f2433420b65f7b">system_measurement::accel_y</a></div><div class="ttdeci">atomic_t accel_y</div><div class="ttdoc">Latest Y-axis acceleration.</div><div class="ttdef"><b>Definition</b> main.h:60</div></div>
 <div class="ttc" id="astructsystem__measurement_html_ac003d622b2be6c6b6d5c7e459fb52306"><div class="ttname"><a href="structsystem__measurement.html#ac003d622b2be6c6b6d5c7e459fb52306">system_measurement::brightness</a></div><div class="ttdeci">atomic_t brightness</div><div class="ttdoc">Latest ambient brightness (0–100%).</div><div class="ttdef"><b>Definition</b> main.h:56</div></div>
 <div class="ttc" id="astructsystem__measurement_html_ad14647be52b836a3d4bd543eee248c28"><div class="ttname"><a href="structsystem__measurement.html#ad14647be52b836a3d4bd543eee248c28">system_measurement::temp</a></div><div class="ttdeci">atomic_t temp</div><div class="ttdoc">Latest temperature (°C).</div><div class="ttdef"><b>Definition</b> main.h:63</div></div>
 <div class="ttc" id="astructsystem__measurement_html_adb4fd1b5c9e8e9005291a7e1edbb2224"><div class="ttname"><a href="structsystem__measurement.html#adb4fd1b5c9e8e9005291a7e1edbb2224">system_measurement::gps_lat</a></div><div class="ttdeci">atomic_t gps_lat</div><div class="ttdoc">Latest GPS latitude (degrees).</div><div class="ttdef"><b>Definition</b> main.h:71</div></div>
-<div class="ttc" id="astructsystem__measurement_html_aeecbf2a697ab8853907de7c7a50f1531"><div class="ttname"><a href="structsystem__measurement.html#aeecbf2a697ab8853907de7c7a50f1531">system_measurement::accel_z</a></div><div class="ttdeci">atomic_t accel_z</div><div class="ttdoc">Latest Z-axis acceleration (in g).</div><div class="ttdef"><b>Definition</b> main.h:61</div></div>
-<div class="ttc" id="astructsystem__measurement_html_af929078057d43ce9fd07cc3c63e558f6"><div class="ttname"><a href="structsystem__measurement.html#af929078057d43ce9fd07cc3c63e558f6">system_measurement::accel_x</a></div><div class="ttdeci">atomic_t accel_x</div><div class="ttdoc">Latest X-axis acceleration (in g).</div><div class="ttdef"><b>Definition</b> main.h:59</div></div>
+<div class="ttc" id="astructsystem__measurement_html_aeecbf2a697ab8853907de7c7a50f1531"><div class="ttname"><a href="structsystem__measurement.html#aeecbf2a697ab8853907de7c7a50f1531">system_measurement::accel_z</a></div><div class="ttdeci">atomic_t accel_z</div><div class="ttdoc">Latest Z-axis acceleration.</div><div class="ttdef"><b>Definition</b> main.h:61</div></div>
+<div class="ttc" id="astructsystem__measurement_html_af929078057d43ce9fd07cc3c63e558f6"><div class="ttname"><a href="structsystem__measurement.html#af929078057d43ce9fd07cc3c63e558f6">system_measurement::accel_x</a></div><div class="ttdeci">atomic_t accel_x</div><div class="ttdoc">Latest X-axis acceleration.</div><div class="ttdef"><b>Definition</b> main.h:59</div></div>
 <div class="ttc" id="astructsystem__measurement_html_af93b0eea24ff8e4fe9df39ce3ecf7a71"><div class="ttname"><a href="structsystem__measurement.html#af93b0eea24ff8e4fe9df39ce3ecf7a71">system_measurement::gps_time</a></div><div class="ttdeci">atomic_t gps_time</div><div class="ttdoc">Latest GPS timestamp (float or encoded).</div><div class="ttdef"><b>Definition</b> main.h:75</div></div>
 <div class="ttc" id="atemp__hum_8h_html"><div class="ttname"><a href="temp__hum_8h.html">temp_hum.h</a></div><div class="ttdoc">Interface for the Si7021 temperature and humidity sensor using Zephyr I2C API.</div></div>
 </div><!-- fragment --></div><!-- contents -->
