--- a/sensors__thread_8c.html
+++ b/sensors__thread_8c.html
@@ -16,7 +16,7 @@
 <meta name="twitter:title" content="Embedded Platforms and Communications for IoT" />
 <meta name="twitter:description" content="Estela Mora Barba" />
 <!-- END twitter metadata -->
-<title>Plant Monitoring System - Phase 3: src/sensors_thread.c File Reference</title>
+<title>Plant Monitoring System: src/sensors_thread.c File Reference</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link rel="icon" type="image/svg+xml" href="logo.drawio.svg"/>
 <script type="text/javascript" src="jquery.js"></script>
@@ -59,7 +59,7 @@
  <tbody>
  <tr style="height: 56px;">
   <td id="projectalign" style="padding-left: 0.5em;">
-   <div id="projectname">Plant Monitoring System - Phase 3
+   <div id="projectname">Plant Monitoring System
    </div>
   </td>
  </tr>
@@ -164,8 +164,8 @@ Functions</h2></td></tr>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <div class="textblock"><p>Implementation of the sensors measurement thread. </p>
 <p>This module defines the Zephyr thread responsible for periodically acquiring data from multiple environmental sensors:</p><ul>
-<li><b>ADC sensors:</b> ambient brightness</li>
-<li><b>I2C sensors:</b> temperature/humidity </li>
+<li><b>ADC sensors:</b> ambient brightness, soil moisture</li>
+<li><b>I2C sensors:</b> temperature/humidity, accelerometer, RGB color </li>
 </ul>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a49e974fd7ad7abcc0c28fdaaaba893ea" name="a49e974fd7ad7abcc0c28fdaaaba893ea"></a>
