--- a/dir_7349e89ef19c117195f8e371603e1b1f.html
+++ b/dir_7349e89ef19c117195f8e371603e1b1f.html
@@ -16,7 +16,7 @@
 <meta name="twitter:title" content="Embedded Platforms and Communications for IoT" />
 <meta name="twitter:description" content="Estela Mora Barba" />
 <!-- END twitter metadata -->
-<title>Plant Monitoring System - Phase 3: src/sensors Directory Reference</title>
+<title>Plant Monitoring System: src/sensors Directory Reference</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link rel="icon" type="image/svg+xml" href="logo.drawio.svg"/>
 <script type="text/javascript" src="jquery.js"></script>
@@ -59,7 +59,7 @@
  <tbody>
  <tr style="height: 56px;">
   <td id="projectalign" style="padding-left: 0.5em;">
-   <div id="projectname">Plant Monitoring System - Phase 3
+   <div id="projectname">Plant Monitoring System
    </div>
   </td>
  </tr>
